Change offset to related posts and fix its button when title is too short

--- a/themes/my-theme/source/css/desktop.scss
+++ b/themes/my-theme/source/css/desktop.scss
@@ -160,6 +160,7 @@
 
   .related-post-header {
     padding: 0 2rem;
+    flex-grow: 1;
   }
 
   .related-post-title {
